[project]
name = "python-current-workflow"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "alpal", email = "spring_special_0f@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]

[tool.ruff]
src = ["src"]
