[project]
name = "python-current-workflow"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "alpal", email = "spring_special_0f@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
test = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]

[tool.ruff.lint]
select = [
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",  # isort
  "N",  # pep8-naming
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "D",  # pydocstyle
  "F",  # pyflakes
  "UP",  # pyupgrade
  "RUF",  # ruff
]
ignore = [
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D102",  # undocumented-public-method
    "D103",  # undocumented-public-function
    "D104",  # undocumented-public-package
    "D105",  # undocumented-magic-method
    "D106",  # undocumented-public-nested-class
    "D107",  # undocumented-public-init
    "D417",  # undocumented-param
    "E203",  # whitespace-before-punctuation
    "B008",  # function-call-in-default-argument
    "S101",  # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
docstring-code-line-length = "dynamic"
